=== 2.0.0 (2025-03-26)

* Add methods for user-visible strings in help output and error messages, so they can be overridden by plugins (jeremyevans)

* Move run_is method to run_is plugin (jeremyevans)

* Move is method to is plugin (jeremyevans)

* Move post command handling to the post_commands plugin (jeremyevans)

* Move invalid_args_message keyword argument handling to invalid_args_message plugin (jeremyevans)

* Move skip_option_parsing method to skip_option_parsing plugin (jeremyevans)

* Remove before method, users should switch to after_options_hook plugin (jeremyevans)

* Move after_options hook to after_options_hook plugin (jeremyevans)

* Add help_option_values plugin for showing allowed option values (jeremyevans)

* Move option parser wrap method to wrapped_options_separator plugin (jeremyevans)

* Move help output caching to cache_help_output plugin (jeremyevans)

* Add help_order plugin to override the order of command help sections (jeremyevans)

* Add help_examples plugin supporting showing examples in command help output (jeremyevans)

* Move usages method to usages plugin (jeremyevans)

* Allow Processor#on to work with a block and no argument to configure the root command (jeremyevans)

* Allow Rodish.processor to not require a block (jeremyevans)

* Implement a plugin system (jeremyevans)

* Command help is now cached if the command is frozen (jeremyevans)

* Remove Command#option_{parsers,text}, as Command#help makes the methods unnecessary (jeremyevans)

* The SkipOptionParser class has been removed as it is no longer needed (jeremyevans)

* CommandFailure now accepts a command argument instead of an array of option parsers (jeremyevans)

* Command#process_command_failure private method no longer takes an option parser argument (jeremyevans)

* OptionParser#subcommands accessor has been removed as it is no longer needed (jeremyevans)

* Make options/post_options methods require a block (jeremyevans)
